Placeholder for thanks

--- a/about.html
+++ b/about.html
@@ -8,4 +8,6 @@ title: About
 	<p>Share your pics and I might use it on the blog(Or something like that) </p>
 
 	<img src="https://images.unsplash.com/photo-1551218808-94e220e084d2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2134&q=80" alt="thelazychef">
+
+	<p>Thanks to the template makers here</p>
 </div>
